Update sbt plugins

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -2,8 +2,8 @@ name=hello-hepek
 organization=ba.sake
 version=0.0.1
 package=$organization;format="lower,package"$.$name;format="lower,word"$
-sbt_hepek_version = maven(ba.sake, sbt-hepek, stable)
-sbt_scalafmt_version = maven(org.scalameta, sbt-scalafmt)
+sbt_hepek_version = maven(ba.sake, sbt-hepek_2.12_1.0, stable)
+sbt_scalafmt_version = maven(org.scalameta, sbt-scalafmt_2.12_1.0)
 scalafmt_version = maven(org.scalameta, scalafmt-core_2.12)
 scala_test_version = maven(org.scalatest, scalatest_2.12, stable)
 verbatim=*.ico *.css *.js
